# otus_c_plus

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  README.md  deploy_filter.sh  deploy_hello.sh  ip_filter.cpp  lib.cpp  lib.hpp  main.cpp
homework_01/hello_world/: .travis.yaml  CMakeLists.txt  test_version.cpp
homework_01/ip_filter/: CMakeLists.txt  ip_filter.cpp
src/: CMakeLists.txt
